# IoTGuard

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  Procfile  README.md  alembic.ini  app.py  default_risks.json  fine_tune_bert.py  koyeb.yaml  main.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
app/: animations.py  gui.py  main.py  theme.py  user_management.py
backend/: database.py  gemini_worker.py  iot_backend.py
demo/: api.py
docker/: Dockerfile  docker-compose.yml
docker/grafana/dashboards/: iotguard-overview.json
docker/grafana/provisioning/: dashboards.yml
docker/prometheus/: prometheus.yml
docs/: index.html
resources/: history.json  iotguard.db  users.db
scripts/: seed_db.py
src/iotguard/: __init__.py  __main__.py
src/iotguard/analysis/: models.py  service.py
src/iotguard/analysis/engines/: base.py  gemini.py  rule_based.py
src/iotguard/analysis/rules/: engine.py
src/iotguard/api/: app.py  dependencies.py  middleware.py  websocket_manager.py
src/iotguard/api/routers/: admin.py  analysis.py  analytics.py  auth.py  devices.py  health.py  mqtt.py  rules.py
src/iotguard/core/: circuit_breaker.py  config.py  events.py  exceptions.py  logging.py  security.py
src/iotguard/db/: engine.py  models.py  repositories.py
src/iotguard/devices/: models.py  service.py
src/iotguard/mqtt/: client.py  service.py
src/iotguard/observability/: audit.py  health.py  metrics.py
tests/: conftest.py  factories.py
tests/integration/: test_api_analysis.py  test_api_auth.py  test_api_devices.py  test_api_health.py  test_api_rules.py  test_db_repositories.py
tests/load/: locustfile.py
tests/unit/: test_analysis_service.py  test_circuit_breaker.py  test_config.py  test_device_service.py  test_events.py  test_exceptions.py  test_gemini_engine.py  test_metrics.py  test_mqtt_client.py  test_rule_engine.py  test_security.py
utils/: config.py  helpers.py  logging_setup.py
